--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,4 +8,5 @@ website: flugnu.xyz
 
 commands:
   TitleArea:
-    description: prout
+    description: Access the TitleArea plugin's commands
+    aliases: ta
