toutes les commandes faites, ne manque que Modify

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,5 +8,5 @@ website: flugnu.xyz
 
 commands:
   TitleArea:
-    description: Access the TitleArea plugin's commands
+    description: Create point that indicate when you look at them and enter them.
     aliases: ta
